samples/_failures_safe/1761090323_78fb25_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0042f5e1.c: In function ‘freeGraph’:
./samples/SAFE/__tmp_0042f5e1.c:188:5: error: expected expression at end of input
  188 |     for (int i =
      |     ^~~
./samples/SAFE/__tmp_0042f5e1.c:188:5: error: expected declaration or statement at end of input
